# agentic_5

./: .env  .env.example  .env.market_oracle.example  .gitignore  .mcp.json  A2A_MCP_FRAMEWORK_REFERENCE.md  A2A_MCP_INDIA_SOCIAL_IMPACT_USE_CASES.md  A2A_MCP_ORACLE_FRAMEWORK.md  A2A_MCP_ORACLE_FRAMEWORK_IMPLEMENTATION_PLAN.md  A2A_MCP_UNIFIED_FRAMEWORK_V2.md  AI_SOLOPRENEUR_SYSTEM_IMPLEMENTATION.md  AI_SOLOPRENEUR_SYSTEM_IMPLEMENTATION_UPDATED.md  ARCHITECTURE_ANALYSIS.md  BLUEPRINT_VS_IMPLEMENTATION_COMPARISON.md  BOILERPLATE_AGENT_FILES_FIXED.md  BOILERPLATE_CORE_AND_TESTS_FIXED.md  BOILERPLATE_CREATION_SUMMARY.md  BOILERPLATE_VERIFICATION.md  BRIGHTDATA_TEST_RESULTS.md  CLAUDE.md  CLAUDE_COMPLIANCE_CHECKLIST.md  COMMANDS.md  CONTENT_STRATEGIST_IMPLEMENTATION_PLAN.md  CUSTOMER_SUPPORT_INTELLIGENCE_IMPLEMENTATION_PLAN.md  Crawl4AI.md  DEVMENTOR_IMPLEMENTATION_PLAN.md  ENHANCED_INVESTIGATIVE_JOURNALISM_PLATFORM.md  FRAMEWORK_COMPONENTS_AND_ORCHESTRATION_GUIDE.md  FRAMEWORK_INCONSISTENCIES_FIXES.md  FRAMEWORK_PATTERN_ANALYSIS_SUMMARY.md  FRAMEWORK_UPDATE_ANALYSIS.md  GOOGLE_CLOUD_AGENTS_DEPLOYMENT_TUTORIAL.md  Google_ADK_Agents.md  HYBRID_FRAMEWORK_IMPLEMENTATION_GUIDE.md  IMPROVEMENTS.md  INITIAL.md  INTERACTIVE_CHAT_README.md  INVESTIGATIVE_CREATOR_AGENT_IMPLEMENTATION.md  INVESTIGATIVE_JOURNALIST_IMPLEMENTATION_PLAN.md  LINKEDIN_CONTENT_DOMINATION_COMPLETE.md  (+214 more)
.claude/: .checksums  .superclaude-metadata.json  CLAUDE.md  PRD.md  SESSION.md  settings.local.json
.idx/: dev.nix
SPECS/: SESSION.md  SPECS.md  TDD.md
agent_cards/: air_ticketing_agent.json  audio_briefer_agent.json  car_rental_agent.json  complexity_analyzer.json  computer_science_supervisor_agent.json  content_orchestrator.json  cross_domain_analysis_supervisor_agent.json  data_analyst.json  economics_policy_supervisor_agent.json  example_agent.json  fundamental_analyst_agent.json  hook_creator.json  hotel_booking_agent.json  integration_synthesis_agent.json  knowledge_management_agent.json  learning_enhancement_agent.json  life_sciences_supervisor_agent.json  memory_enabled_agent.json  nexus_oracle_agent.json  nexus_orchestrator_agent.json  nexus_planner_agent.json  oracle_prime_agent.json  orchestrator_agent.json  personal_optimization_agent.json  physical_sciences_supervisor_agent.json  planner_agent.json  psychology_supervisor_agent.json  quality_orchestrator.json  report_synthesizer_agent.json  research_agent.json  risk_guardian_agent.json  script_writer.json  sentiment_seeker_agent.json  sentiment_seeker_agent_brightdata.json  seo_agent.json  social_sciences_supervisor_agent.json  solopreneur_oracle_agent.json  style_checker.json  technical_intelligence_agent.json  technical_prophet_agent.json  (+3 more)
agentic-framework-boilerplate/: .env.template  .gitignore  .mcp.json.example  A2A_MCP_INNOVATIVE_USE_CASES.md  A2A_MCP_ORACLE_FRAMEWORK.md  A2A_MCP_USE_CASES_INDEX.md  ADK_DISCOVERY_SUMMARY.md  CLAUDE.md  CLEANUP_SUMMARY.md  EXAMPLE_IMPLEMENTATIONS.md  FIRST_PRINCIPLES_TRANSFORMATION.md  IMPROVEMENTS.md  NEXT_STEPS.md  ORCHESTRATION_STRATEGIES.md  QUICKSTART.md  README.md  SANKHYA_BASED_AGENTS_PROPOSAL.md  SANKHYA_KNOWLEDGE_SYSTEM_IMPLEMENTATION.md  pyproject.toml  requirements.txt  run_tests.py  snowflake_mcp.py  stop.sh
agentic-framework-boilerplate/SPECS/: PLAN.md
agentic-framework-boilerplate/agent_cards/tier1/: master_oracle.json  master_orchestrator.json
agentic-framework-boilerplate/agent_cards/tier2/: domain_specialist.json
agentic-framework-boilerplate/agent_cards/tier3/: service_agent.json
agentic-framework-boilerplate/docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  DOMAIN_CUSTOMIZATION_GUIDE.md  GOOGLE_CLOUD_AGENTS_DEPLOYMENT_TUTORIAL.md  INTEGRATION_PATTERNS.md  MCP_INTEGRATION_GUIDE.md  SUPABASE_INTEGRATION_PLAN.md
agentic-framework-boilerplate/examples/clients/: README.md
agentic-framework-boilerplate/examples/domains/solopreneur_oracle/: README.md  agent_registry.py
agentic-framework-boilerplate/examples/finance/: supabase_finance_client.py
agentic-framework-boilerplate/examples/travel/: README.md  prompts.py  types.py
agentic-framework-boilerplate/launch/: start_all.sh
agentic-framework-boilerplate/src/a2a_mcp/: __init__.py
agentic-framework-boilerplate/src/a2a_mcp/agents/: __main__.py  adk_service_agent.py  master_orchestrator_template.py
agentic-framework-boilerplate/src/a2a_mcp/agents/example_domain/: domain_specialist.py  master_oracle.py  service_agent.py
agentic-framework-boilerplate/src/a2a_mcp/agents/example_travel_domain/: adk_travel_agent.py  langgraph_planner_agent.py  orchestrator_agent.py
agentic-framework-boilerplate/src/a2a_mcp/agents/examples/: data_validation_agent.py  summarization_agent.py
agentic-framework-boilerplate/src/a2a_mcp/common/: standardized_agent_base.py  supabase_client.py  unified_mcp_tools.py  utils.py
agentic-framework-boilerplate/src/a2a_mcp/core/: README.md  __init__.py  protocol.py  quality.py
agentic-framework-boilerplate/src/a2a_mcp/mcp/: README.md  server.py
agentic-framework-boilerplate/tests/: test_agents.py  test_base_agent.py  test_example_agents.py
clients/: solopreneur_client.py
configs/: .env.template  framework.yaml  memory_config_schema.md  observability.yaml
databases/: solopreneur_database_schema.sql
docs/: A2A_MCP_ORACLE_FRAMEWORK.md  ADK_SERVICE_AGENT_TEMPLATE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  DOMAIN_CUSTOMIZATION_GUIDE.md  GENERIC_DEPLOYMENT_GUIDE.md  GOOGLE_ADK_IMPLEMENTATION_PLAN.md  INTEGRATION_PATTERNS.md  LINKEDIN_DOMINATION_CORRECTED_COMMANDS.md  METRICS_REFERENCE.md  OBSERVABILITY_DEPLOYMENT.md  ORCHESTRATION_STRATEGIES.md  PHASE1_OPTIMIZATIONS.md  SERVER_ARCHITECTURE.md  video_generator_implementation_plan.md  video_generator_system_design.md
docs_others/: EXAMPLE_IMPLEMENTATIONS.md  FIRST_PRINCIPLES_TRANSFORMATION.md  GOOGLE_CLOUD_AGENTS_DEPLOYMENT_TUTORIAL.md  IMPROVEMENTS.md  MCP_INTEGRATION_GUIDE.md  MCP_SERVER_PATTERNS.md  METRICS_REFERENCE.md  NEXT_STEPS.md  PHASE1_OPTIMIZATIONS.md  SUPABASE_INTEGRATION_PLAN.md
examples/: agent_with_memory_continuity.py  memory_continuity_example.py  (+4 more)
(+390 files in other folders)
